semantic html container, added img placeholder with float-left and mr-3, alt text

--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,16 @@
         </div>
       </nav>
 
+    <main class="container">
+        <article class="row">
+            <section class="col-4">
+                <h1>About Me</h1>
+                <hr>
+                <img src="https://picsum.photos/150/100" class="float-left mr-3" alt="Emmett Brady"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit magnam obcaecati odit similique, vel nobis officiis sit pariatur consectetur cupiditate. Nulla ex impedit iusto quas totam commodi molestias suscipit exercitationem quasi delectus. Natus praesentium voluptates molestiae voluptatibus inventore doloremque consectetur perspiciatis, quia minus. Sequi minima aspernatur id eligendi, minus consectetur.</p>
+            </section>
+        </article>
+    </main>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
