--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
         </div>
       </nav>
 
-    <main class="container">
+    <main class="container mt-3">
         <article class="row">
             <section class="col-4">
                 <h1>About Me</h1>
