created grid for portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,6 +36,29 @@
         </div>
     </nav>
 
+    <main>
+        <div class="row">
+            <div class="col-4">
+                <img src="https://picsum.photos/150/100" alt="Project 1">
+                <img src="https://picsum.photos/150/100" alt="Project 2">
+            </div>
+
+         <div class="row">
+                <div class="col-4">
+                    <img src="https://picsum.photos/150/100" alt="Project 3">
+                    <img src="https://picsum.photos/150/100" alt="Project 4">
+                </div>
+            </div>
+
+        <div class="row">
+                <div class="col-4">
+                    <img src="https://picsum.photos/150/100" alt="Project 5">
+                    <img src="https://picsum.photos/150/100" alt="Project 6">
+                </div>
+            </div>
+        </div>
+    </main>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
