added URL where Emmett Brady points to on all pages, adjusted container sizing/margins on index.html

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <title>About Me | Emmett Brady</title>
 </head>
 
-<body>
+<body class="bg-light">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Emmett Brady</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <h1><a class="navbar-brand bg-info ml-2" href="./index.html">Emmett Brady</a></h1>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="./index.html">About<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./portfolio.html">Portfolio</a>
@@ -36,9 +36,9 @@
         </div>
     </nav>
 
-    <main class="container mt-3">
+    <main class="container bg-white mt-3 ml-4 w-25 float-left">
         <article class="row">
-            <section class="col-4">
+            <section class="col-12">
                 <h1>About Me</h1>
                 <hr>
                 <img src="https://picsum.photos/150/100" class="float-left mr-3" alt="Emmett Brady">
