--- a/contact.html
+++ b/contact.html
@@ -36,35 +36,35 @@
         </div>
     </nav>
 
-    <main>
+    <main class="container bg-white mt-3 ml-4 w-50">
 
         <form class="mt-3 ml-3">
             <h1>Contact</h1>
             <hr>
             <div class="form-group row">
-                <div class="col-3">
+                <div class="col-6">
                     <label for="name">Name</label>
                     <input type="text" class="form-control" id="name" placeholder="Name">
                 </div>
             </div>
 
             <div class="form-group row">
-                <div class="col-3">
+                <div class="col-6">
                     <label for="inputEmail3">Email</label>
                     <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
                 </div>
             </div>
 
             <div class="form-group row">
-                <div class="col-3">
+                <div class="col-6">
                     <label for="message">Message</label>
-                    <textarea class="form-control rounded-0" id="Message" placeholder="Message" rows="3"></textarea>
+                    <textarea class="form-control rounded" id="Message" placeholder="Message" rows="3"></textarea>
                 </div>
             </div>
 
             <div class="form-group row">
-                <div class="col-3">
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                <div class="col-6">
+                    <button type="submit" class="btn btn-primary bg-info">Submit</button>
                 </div>
             </div>
         </form>
