--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
             <div class="form-group row">
                 <div class="col-6">
                     <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name" placeholder="Name">
+                    <input type="text" class="form-control container-fluid" style-"min-width:100%!important;" id="name" placeholder="Name">
                 </div>
             </div>
 
