--- a/portfolio.html
+++ b/portfolio.html
@@ -36,22 +36,19 @@
         </div>
     </nav>
 
-    <main>
+    <main class="container bg-white mt-3 ml-4 w-50 float-left">
+        <h1>Portfolio</h1>
+        <hr>
         <div class="row">
             <div class="col-4">
                 <img src="https://picsum.photos/150/100" alt="Project 1">
                 <img src="https://picsum.photos/150/100" alt="Project 2">
+                <img src="https://picsum.photos/150/100" alt="Project 3">
             </div>
 
-         <div class="row">
+            <div class="row">
                 <div class="col-4">
-                    <img src="https://picsum.photos/150/100" alt="Project 3">
                     <img src="https://picsum.photos/150/100" alt="Project 4">
-                </div>
-            </div>
-
-        <div class="row">
-                <div class="col-4">
                     <img src="https://picsum.photos/150/100" alt="Project 5">
                     <img src="https://picsum.photos/150/100" alt="Project 6">
                 </div>
