utilized bootstrap cards within grid on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Assets/css/">
 
     <title>Portfolio | Emmett Brady</title>
 </head>
@@ -16,7 +17,7 @@
 <body class="bg-light">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
-        <h1><a class="navbar-brand bg-info ml-2" href="./index.html">Emmett Brady</a></h1>
+        <h1><a class="navbar-brand bg-info ml-2 text-white" href="./index.html">Emmett Brady</a></h1>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -41,21 +42,51 @@
         <hr>
         <div class="row">
             <div class="col-4">
-                <img src="https://picsum.photos/150/100" alt="Project 1">
-                <img src="https://picsum.photos/150/100" alt="Project 2">
-                <img src="https://picsum.photos/150/100" alt="Project 3">
+                <div class="card" style="width: 18rem; margin-bottom: 30px">
+                    <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 1">
+                    <div class="card-body">
+                      <p class="card-text">Project 1</p>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem; margin-bottom: 30px">
+                    <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 2">
+                    <div class="card-body">
+                      <p class="card-text">Project 2</p>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem; margin-bottom: 30px">
+                    <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 3">
+                    <div class="card-body">
+                      <p class="card-text">Project 3</p>
+                    </div>
+                  </div>
             </div>
 
-            <div class="row">
-                <div class="col-4">
-                    <img src="https://picsum.photos/150/100" alt="Project 4">
-                    <img src="https://picsum.photos/150/100" alt="Project 5">
-                    <img src="https://picsum.photos/150/100" alt="Project 6">
-                </div>
+            <div class="col-4">
+                <div class="card" style="width: 18rem; margin-bottom: 30px">
+                    <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 4">
+                    <div class="card-body">
+                      <p class="card-text">Project 4</p>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem; margin-bottom: 30px">
+                    <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 5">
+                    <div class="card-body">
+                      <p class="card-text">Project 5</p>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem; margin-bottom: 30px">
+                    <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 6">
+                    <div class="card-body">
+                      <p class="card-text">Project 6</p>
+                    </div>
+                  </div>
             </div>
         </div>
     </main>
 
+
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
