added .css stylesheet and linked all html pages to it

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="./Assets/css/">
     <title>Contact | Emmett Brady</title>
 </head>
 
@@ -35,41 +35,45 @@
             </ul>
         </div>
     </nav>
+    <wrapper>
+        <main class="container bg-white mt-3 ml-4 w-50">
 
-    <main class="container bg-white mt-3 ml-4 w-50">
-
-        <form class="mt-3 ml-3">
-            <h1>Contact</h1>
-            <hr>
-            <div class="form-group row">
-                <div class="col-6">
-                    <label for="name">Name</label>
-                    <input type="text" class="form-control container-fluid" style-"min-width:100%!important;" id="name" placeholder="Name">
+            <form class="mt-3 ml-3">
+                <h1>Contact</h1>
+                <hr>
+                <div class="form-group row">
+                    <div class="col-6">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control container-fluid" style-"min-width:100%!important;"
+                            id="name" placeholder="Name">
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group row">
-                <div class="col-6">
-                    <label for="inputEmail3">Email</label>
-                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                <div class="form-group row">
+                    <div class="col-6">
+                        <label for="inputEmail3">Email</label>
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group row">
-                <div class="col-6">
-                    <label for="message">Message</label>
-                    <textarea class="form-control rounded" id="Message" placeholder="Message" rows="3"></textarea>
+                <div class="form-group row">
+                    <div class="col-6">
+                        <label for="message">Message</label>
+                        <textarea class="form-control rounded" id="Message" placeholder="Message" rows="3"></textarea>
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group row">
-                <div class="col-6">
-                    <button type="submit" class="btn btn-primary bg-info">Submit</button>
+                <div class="form-group row">
+                    <div class="col-6">
+                        <button type="submit" class="btn btn-primary bg-info">Submit</button>
+                    </div>
                 </div>
-            </div>
-        </form>
-    </main>
-
+            </form>
+        </main>
+        <footer>
+            <p class="text-center">&copy; Emmett Brady</p>
+        </footer>
+    </wrapper>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
