--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Assets/css/">
     <title>About Me | Emmett Brady</title>
 </head>
 
@@ -35,21 +36,27 @@
         </div>
     </nav>
 
-    <main class="container bg-white mt-3 ml-4 w-25 float-left">
-        <article class="row">
-            <section class="col-12">
-                <h1>About Me</h1>
-                <hr>
-                <img src="https://picsum.photos/150/100" class="float-left mr-3" alt="Emmett Brady">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit magnam obcaecati odit similique, vel
-                    nobis officiis sit pariatur consectetur cupiditate. Nulla ex impedit iusto quas totam commodi
-                    molestias suscipit exercitationem quasi delectus. Natus praesentium voluptates molestiae
-                    voluptatibus inventore doloremque consectetur perspiciatis, quia minus. Sequi minima aspernatur id
-                    eligendi, minus consectetur.</p>
-            </section>
-        </article>
-    </main>
-
+    <wrapper>
+        <main class="container bg-white mt-3 ml-4 w-25 float-left">
+            <article class="row">
+                <section class="col-12">
+                    <h1>About Me</h1>
+                    <hr>
+                    <img src="https://picsum.photos/150/100" class="float-left mr-3" alt="Emmett Brady">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit magnam obcaecati odit similique,
+                        vel
+                        nobis officiis sit pariatur consectetur cupiditate. Nulla ex impedit iusto quas totam commodi
+                        molestias suscipit exercitationem quasi delectus. Natus praesentium voluptates molestiae
+                        voluptatibus inventore doloremque consectetur perspiciatis, quia minus. Sequi minima aspernatur
+                        id
+                        eligendi, minus consectetur.</p>
+                </section>
+            </article>
+        </main>
+        <footer>
+            <p class="text-center">&copy; Emmett Brady</p>
+        </footer>
+    </wrapper>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
