Added sticky footer to all html pages.

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,59 +36,60 @@
             </ul>
         </div>
     </nav>
-    <wrapper class="d-flex flex-column">
-        <main class="container bg-white mt-3 ml-4 w-50 float-left">
-            <h1>Portfolio</h1>
-            <hr>
-            <div class="row">
-                <div class="col-4">
-                    <div class="card" style="width: 18rem; margin-bottom: 30px">
-                        <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 1">
-                        <div class="card-body">
-                            <p class="card-text">Project 1</p>
-                        </div>
-                    </div>
-                    <div class="card" style="width: 18rem; margin-bottom: 30px">
-                        <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 2">
-                        <div class="card-body">
-                            <p class="card-text">Project 2</p>
-                        </div>
-                    </div>
-                    <div class="card" style="width: 18rem; margin-bottom: 30px">
-                        <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 3">
-                        <div class="card-body">
-                            <p class="card-text">Project 3</p>
-                        </div>
+    <main class="container bg-white mt-3 ml-4 w-50 float-left">
+        <h1>Portfolio</h1>
+        <hr>
+        <div class="row">
+            <div class="col-4">
+                <div class="card" style="width: 18rem; margin-bottom: 30px">
+                    <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 1">
+                    <div class="card-body">
+                        <p class="card-text">Project 1</p>
                     </div>
                 </div>
-
-                <div class="col-4">
-                    <div class="card" style="width: 18rem; margin-bottom: 30px">
-                        <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 4">
-                        <div class="card-body">
-                            <p class="card-text">Project 4</p>
-                        </div>
+                <div class="card" style="width: 18rem; margin-bottom: 30px">
+                    <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 2">
+                    <div class="card-body">
+                        <p class="card-text">Project 2</p>
                     </div>
-                    <div class="card" style="width: 18rem; margin-bottom: 30px">
-                        <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 5">
-                        <div class="card-body">
-                            <p class="card-text">Project 5</p>
-                        </div>
-                    </div>
-                    <div class="card" style="width: 18rem; margin-bottom: 30px">
-                        <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 6">
-                        <div class="card-body">
-                            <p class="card-text">Project 6</p>
-                        </div>
+                </div>
+                <div class="card" style="width: 18rem; margin-bottom: 30px">
+                    <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 3">
+                    <div class="card-body">
+                        <p class="card-text">Project 3</p>
                     </div>
                 </div>
             </div>
-        </main>
 
-        <footer>
-            <p class="text-center">&copy; Emmett Brady</p>
-        </footer>
-    </wrapper>
+            <div class="col-4">
+                <div class="card" style="width: 18rem; margin-bottom: 30px">
+                    <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 4">
+                    <div class="card-body">
+                        <p class="card-text">Project 4</p>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem; margin-bottom: 30px">
+                    <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 5">
+                    <div class="card-body">
+                        <p class="card-text">Project 5</p>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem; margin-bottom: 30px">
+                    <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 6">
+                    <div class="card-body">
+                        <p class="card-text">Project 6</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <div class="containerend">
+            <span class="text-muted">&copy; 2020 Emmett Brady</span>
+        </div>
+    </footer>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
