--- a/contact.html
+++ b/contact.html
@@ -35,45 +35,48 @@
             </ul>
         </div>
     </nav>
-    <wrapper>
-        <main class="container bg-white mt-3 ml-4 w-50">
+    <main class="container bg-white mt-3 ml-4 w-50">
 
-            <form class="mt-3 ml-3">
-                <h1>Contact</h1>
-                <hr>
-                <div class="form-group row">
-                    <div class="col-6">
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control container-fluid" style-"min-width:100%!important;"
-                            id="name" placeholder="Name">
-                    </div>
+        <form class="mt-3 ml-3">
+            <h1>Contact</h1>
+            <hr>
+            <div class="form-group row">
+                <div class="col-6">
+                    <label for="name">Name</label>
+                    <input type="text" class="form-control container-fluid" style-"min-width:100%!important;" id="name"
+                        placeholder="Name">
                 </div>
+            </div>
 
-                <div class="form-group row">
-                    <div class="col-6">
-                        <label for="inputEmail3">Email</label>
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                    </div>
+            <div class="form-group row">
+                <div class="col-6">
+                    <label for="inputEmail3">Email</label>
+                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
                 </div>
+            </div>
 
-                <div class="form-group row">
-                    <div class="col-6">
-                        <label for="message">Message</label>
-                        <textarea class="form-control rounded" id="Message" placeholder="Message" rows="3"></textarea>
-                    </div>
+            <div class="form-group row">
+                <div class="col-6">
+                    <label for="message">Message</label>
+                    <textarea class="form-control rounded" id="Message" placeholder="Message" rows="3"></textarea>
                 </div>
+            </div>
 
-                <div class="form-group row">
-                    <div class="col-6">
-                        <button type="submit" class="btn btn-primary bg-info">Submit</button>
-                    </div>
+            <div class="form-group row">
+                <div class="col-6">
+                    <button type="submit" class="btn btn-primary bg-info">Submit</button>
                 </div>
-            </form>
-        </main>
-        <footer>
-            <p class="text-center">&copy; Emmett Brady</p>
-        </footer>
-    </wrapper>
+            </div>
+        </form>
+    </main>
+
+    <footer class="footer">
+        <div class="containerend">
+            <span class="text-muted">&copy; 2020 Emmett Brady</span>
+        </div>
+    </footer>
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
