--- a/index.html
+++ b/index.html
@@ -36,27 +36,29 @@
         </div>
     </nav>
 
-    <wrapper>
-        <main class="container bg-white mt-3 ml-4 w-25 float-left">
-            <article class="row">
-                <section class="col-12">
-                    <h1>About Me</h1>
-                    <hr>
-                    <img src="https://picsum.photos/150/100" class="float-left mr-3" alt="Emmett Brady">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit magnam obcaecati odit similique,
-                        vel
-                        nobis officiis sit pariatur consectetur cupiditate. Nulla ex impedit iusto quas totam commodi
-                        molestias suscipit exercitationem quasi delectus. Natus praesentium voluptates molestiae
-                        voluptatibus inventore doloremque consectetur perspiciatis, quia minus. Sequi minima aspernatur
-                        id
-                        eligendi, minus consectetur.</p>
-                </section>
-            </article>
-        </main>
-        <footer>
-            <p class="text-center">&copy; Emmett Brady</p>
-        </footer>
-    </wrapper>
+    <main class="container bg-white mt-3 ml-4 w-25 float-left">
+        <article class="row">
+            <section class="col-12">
+                <h1>About Me</h1>
+                <hr>
+                <img src="https://picsum.photos/150/100" class="float-left mr-3" alt="Emmett Brady">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit magnam obcaecati odit similique,
+                    vel
+                    nobis officiis sit pariatur consectetur cupiditate. Nulla ex impedit iusto quas totam commodi
+                    molestias suscipit exercitationem quasi delectus. Natus praesentium voluptates molestiae
+                    voluptatibus inventore doloremque consectetur perspiciatis, quia minus. Sequi minima aspernatur
+                    id
+                    eligendi, minus consectetur.</p>
+            </section>
+        </article>
+    </main>
+
+    <footer class="footer">
+        <div class="containerend">
+            <span class="text-muted">&copy; 2020 Emmett Brady</span>
+        </div>
+    </footer>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
