Updated text for about me section.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body class="bg-light">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-white">
         <h1><a class="navbar-brand bg-info ml-2 text-white" href="./index.html">Emmett Brady</a></h1>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,19 +36,14 @@
         </div>
     </nav>
 
-    <main class="container bg-white mt-3 ml-4 w-25 float-left">
+    <main class="container-fluid bg-white mt-3 ml-4 w-50 float-left">
         <article class="row">
-            <section class="col-12">
+            <section class="col-lg-12">
                 <h1>About Me</h1>
                 <hr>
                 <img src="https://picsum.photos/150/100" class="float-left mr-3" alt="Emmett Brady">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit magnam obcaecati odit similique,
-                    vel
-                    nobis officiis sit pariatur consectetur cupiditate. Nulla ex impedit iusto quas totam commodi
-                    molestias suscipit exercitationem quasi delectus. Natus praesentium voluptates molestiae
-                    voluptatibus inventore doloremque consectetur perspiciatis, quia minus. Sequi minima aspernatur
-                    id
-                    eligendi, minus consectetur.</p>
+                <p>Emmett Brady has lived and worked in the Bay Area since 2009. For the past six years he worked for the Department of Agriculture performing organic certification inspections. Currently he is in Berkeley Coding Bootcamp's Full Stack Web Development course looking to make a career change into web development. </p>
+                <p>In his free time he enjoys playing video games, gardening, and debugging code for hours.</p>
             </section>
         </article>
     </main>
