--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 
 <body class="bg-light">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-white">
         <h1><a class="navbar-brand bg-info ml-2 text-white" href="./index.html">Emmett Brady</a></h1>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,8 +43,7 @@
             <div class="form-group row">
                 <div class="col-6">
                     <label for="name">Name</label>
-                    <input type="text" class="form-control container-fluid" style-"min-width:100%!important;" id="name"
-                        placeholder="Name">
+                    <input type="text" class="form-control container-fluid" id="name" placeholder="Name">
                 </div>
             </div>
 
