--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 
 <body class="bg-light">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-white">
         <h1><a class="navbar-brand bg-info ml-2 text-white" href="./index.html">Emmett Brady</a></h1>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
