--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <section class="col-lg-12">
                 <h1>About Me</h1>
                 <hr>
-                <img src="https://picsum.photos/150/100" class="float-left mr-3" alt="Emmett Brady">
+                <img src="https://picsum.photos/150/100" class="float-left mr-3 img-fluid" alt="Emmett Brady">
                 <p>Emmett Brady has lived and worked in the Bay Area since 2009. For the past six years he worked for the Department of Agriculture performing organic certification inspections. Currently he is in Berkeley Coding Bootcamp's Full Stack Web Development course looking to make a career change into web development. </p>
                 <p>In his free time he enjoys playing video games, gardening, and debugging code for hours.</p>
             </section>
