--- a/portfolio.html
+++ b/portfolio.html
@@ -40,42 +40,42 @@
         <h1>Portfolio</h1>
         <hr>
         <div class="row">
-            <div class="col-4">
+            <div class="col-lg-4">
                 <div class="card" style="width: 18rem; margin-bottom: 30px">
-                    <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 1">
+                    <img class="card-img-top img-fluid" src="https://picsum.photos/150/100" alt="Project 1">
                     <div class="card-body">
                         <p class="card-text">Project 1</p>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem; margin-bottom: 30px">
-                    <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 2">
+                    <img class="card-img-top img-fluid" src="https://picsum.photos/150/100" alt="Project 2">
                     <div class="card-body">
                         <p class="card-text">Project 2</p>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem; margin-bottom: 30px">
-                    <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 3">
+                    <img class="card-img-top img-fluid" src="https://picsum.photos/150/100" alt="Project 3">
                     <div class="card-body">
                         <p class="card-text">Project 3</p>
                     </div>
                 </div>
             </div>
 
-            <div class="col-4">
+            <div class="col-lg-4">
                 <div class="card" style="width: 18rem; margin-bottom: 30px">
-                    <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 4">
+                    <img class="card-img-top img-fluid" src="https://picsum.photos/150/100" alt="Project 4">
                     <div class="card-body">
                         <p class="card-text">Project 4</p>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem; margin-bottom: 30px">
-                    <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 5">
+                    <img class="card-img-top img-fluid" src="https://picsum.photos/150/100" alt="Project 5">
                     <div class="card-body">
                         <p class="card-text">Project 5</p>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem; margin-bottom: 30px">
-                    <img class="card-img-top" src="https://picsum.photos/150/100" alt="Project 6">
+                    <img class="card-img-top img-fluid" src="https://picsum.photos/150/100" alt="Project 6">
                     <div class="card-body">
                         <p class="card-text">Project 6</p>
                     </div>
