adjusted CSS/HTML to enable sticky footer on each html page

--- a/contact.html
+++ b/contact.html
@@ -67,13 +67,15 @@
                 </div>
             </div>
         </form>
+
+        <footer class="footer">
+            <div class="container">
+                <span class="text-muted">&copy; 2020 Emmett Brady</span>
+            </div>
+        </footer>
     </main>
 
-    <footer class="footer">
-        <div class="containerend">
-            <span class="text-muted">&copy; 2020 Emmett Brady</span>
-        </div>
-    </footer>
+ 
 
 
     <!-- Optional JavaScript -->
