--- a/index.html
+++ b/index.html
@@ -46,13 +46,15 @@
                 <p>In his free time he enjoys playing video games, gardening, and debugging code for hours.</p>
             </section>
         </article>
+
+        <footer class="footer">
+            <div class="container">
+                <span class="text-muted">&copy; 2020 Emmett Brady</span>
+            </div>
+        </footer>
     </main>
 
-    <footer class="footer">
-        <div class="containerend">
-            <span class="text-muted">&copy; 2020 Emmett Brady</span>
-        </div>
-    </footer>
+
 
 
     <!-- Optional JavaScript -->
