made portfolio page mobile responsive

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,11 +36,11 @@
             </ul>
         </div>
     </nav>
-    <main class="container bg-white mt-3 ml-4 w-50 float-left">
+    <main class="container bg-white mt-3 ml-4 w-100 float-left">
         <h1>Portfolio</h1>
         <hr>
         <div class="row">
-            <div class="col-lg-4">
+            <div class="col-xl-4 col-lg-4 col-md-5">
                 <div class="card" style="width: 18rem; margin-bottom: 30px">
                     <img class="card-img-top img-fluid" src="https://picsum.photos/150/100" alt="Project 1">
                     <div class="card-body">
@@ -61,7 +61,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-4">
+            <div class="col-xl-4 col-lg-4 col-md-5">
                 <div class="card" style="width: 18rem; margin-bottom: 30px">
                     <img class="card-img-top img-fluid" src="https://picsum.photos/150/100" alt="Project 4">
                     <div class="card-body">
@@ -82,7 +82,7 @@
                 </div>
             </div>
         </div>
-        
+
         <footer class="footer">
             <div class="container">
                 <span class="text-muted">&copy; 2020 Emmett Brady</span>
