adjusted sticky footer for each page to a fixed-bottom position

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
             </ul>
         </div>
     </nav>
-    <main class="container bg-white mt-3 ml-4 w-50">
+    <main class="container bg-white mt-3 ml-4 w-75">
 
         <form class="mt-3 ml-3">
             <h1>Contact</h1>
@@ -67,15 +67,13 @@
                 </div>
             </div>
         </form>
-
-        <footer class="footer">
-            <div class="container">
-                <span class="text-muted">&copy; 2020 Emmett Brady</span>
-            </div>
-        </footer>
     </main>
 
- 
+    <footer class="container-fluid">
+        <nav class="navbar fixed-bottom">
+            &copy; 2020 | Emmett Brady
+        </nav>
+      </footer>
 
 
     <!-- Optional JavaScript -->
