--- a/portfolio.html
+++ b/portfolio.html
@@ -82,15 +82,13 @@
                 </div>
             </div>
         </div>
-
-        <footer class="footer">
-            <div class="container">
-                <span class="text-muted">&copy; 2020 Emmett Brady</span>
-            </div>
-        </footer>
     </main>
 
-
+    <footer class="container-fluid">
+        <nav class="navbar fixed-bottom">
+          &copy; 2020 | Emmett Brady
+        </nav>
+      </footer>
 
 
     <!-- Optional JavaScript -->
