--- a/index.html
+++ b/index.html
@@ -46,15 +46,13 @@
                 <p>In his free time he enjoys playing video games, gardening, and debugging code for hours.</p>
             </section>
         </article>
-
-        <footer class="footer">
-            <div class="container">
-                <span class="text-muted">&copy; 2020 Emmett Brady</span>
-            </div>
-        </footer>
     </main>
 
-
+    <footer class="container-fluid">
+        <nav class="navbar fixed-bottom">
+            &copy; 2020 | Emmett Brady
+        </nav>
+      </footer>
 
 
     <!-- Optional JavaScript -->
