changed sticky footer to flexbox

--- a/contact.html
+++ b/contact.html
@@ -69,11 +69,9 @@
         </form>
     </main>
 
-    <footer class="container-fluid">
-        <nav class="navbar fixed-bottom">
-            &copy; 2020 | Emmett Brady
-        </nav>
-      </footer>
+    <footer class="footer">
+        &copy; Emmett Brady
+    </footer>
 
 
     <!-- Optional JavaScript -->
