--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <title>Portfolio | Emmett Brady</title>
 </head>
 
-<body class="bg-light">
+<body class="d-flex flex-column bg-light" style="min-height: 100vh">
 
     <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-white">
         <h1><a class="navbar-brand bg-info ml-2 text-white" href="./index.html">Emmett Brady</a></h1>
@@ -36,7 +36,7 @@
             </ul>
         </div>
     </nav>
-    <main class="container bg-white mt-3 ml-4 w-100 float-left">
+    <main class="container flex-fill bg-white mt-3 ml-4 w-100 float-left">
         <h1>Portfolio</h1>
         <hr>
         <div class="row">
@@ -84,11 +84,9 @@
         </div>
     </main>
 
-    <footer class="container-fluid">
-        <nav class="navbar fixed-bottom">
-          &copy; 2020 | Emmett Brady
-        </nav>
-      </footer>
+    <footer class="footer">
+        &copy; Emmett Brady
+    </footer>
 
 
     <!-- Optional JavaScript -->
