--- a/index.html
+++ b/index.html
@@ -48,11 +48,9 @@
         </article>
     </main>
 
-    <footer class="container-fluid">
-        <nav class="navbar fixed-bottom">
-            &copy; 2020 | Emmett Brady
-        </nav>
-      </footer>
+    <footer class="footer">
+        &copy; Emmett Brady
+    </footer>
 
 
     <!-- Optional JavaScript -->
