updated sticky footer html

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <title>Portfolio | Emmett Brady</title>
 </head>
 
-<body class="d-flex flex-column bg-light" style="min-height: 100vh">
+<body class="d-flex flex-column sticky-footer-wrapper bg-light">
 
     <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-white">
         <h1><a class="navbar-brand bg-info ml-2 text-white" href="./index.html">Emmett Brady</a></h1>
@@ -36,7 +36,7 @@
             </ul>
         </div>
     </nav>
-    <main class="container flex-fill bg-white mt-3 ml-4 w-100 float-left">
+    <main class="container-fluid flex-fill bg-white mt-3 ml-4 w-100 float-left">
         <h1>Portfolio</h1>
         <hr>
         <div class="row">
