--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <title>Contact | Emmett Brady</title>
 </head>
 
-<body class="bg-light">
+<body class="d-flex flex-column sticky-footer-wrapper bg-light">
 
     <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-white">
         <h1><a class="navbar-brand bg-info ml-2 text-white" href="./index.html">Emmett Brady</a></h1>
@@ -35,7 +35,7 @@
             </ul>
         </div>
     </nav>
-    <main class="container bg-white mt-3 ml-4 w-75">
+    <main class="container-fluid flex-fill bg-white mt-3 ml-4 w-75">
 
         <form class="mt-3 ml-3">
             <h1>Contact</h1>
