--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>About Me | Emmett Brady</title>
 </head>
 
-<body class="bg-light">
+<body class="d-flex flex-column sticky-footer-wrapper bg-light">
 
     <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-white">
         <h1><a class="navbar-brand bg-info ml-2 text-white" href="./index.html">Emmett Brady</a></h1>
@@ -36,7 +36,7 @@
         </div>
     </nav>
 
-    <main class="container-fluid bg-white mt-3 ml-4 w-50 float-left">
+    <main class="container-fluid flex-fill bg-white mt-3 ml-4 w-50 float-left">
         <article class="row">
             <section class="col-lg-12">
                 <h1>About Me</h1>
@@ -47,6 +47,16 @@
             </section>
         </article>
     </main>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
     <footer class="footer">
         &copy; Emmett Brady
