--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body class="d-flex flex-column sticky-footer-wrapper bg-light">
 
-    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-white">
-        <h1><a class="navbar-brand bg-info ml-2 text-white" href="./index.html">Emmett Brady</a></h1>
+    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-info">
+        <h1><a class="navbar-brand ml-2 text-white" href="./index.html">Emmett Brady</a></h1>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,13 +24,13 @@
         <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="./index.html">About<span class="sr-only">(current)</span></a>
+                    <a class="nav-link text-white" href="./index.html">About<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                    <a class="nav-link text-white" href="./portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact</a>
+                    <a class="nav-link text-white" href="./contact.html">Contact</a>
                 </li>
             </ul>
         </div>
