--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </article>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" style="text-align: center">
         &copy; Emmett Brady
     </footer>
 
