--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
         </div>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" style="text-align: center">
         &copy; Emmett Brady
     </footer>
 
