--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
         </form>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" style="text-align: center">
         &copy; Emmett Brady
     </footer>
 
