--- a/portfolio.html
+++ b/portfolio.html
@@ -69,15 +69,15 @@
         <div class="row">
             <div class="col-xl-6 col-lg-8 col-md-10">
                 <div class="image mb-3 mr-2">
-                    <img class="img-fluid" src="https://picsum.photos/200/200" alt="Project 1">
+                    <img class="img-fluid" src="./Assets/Images/catan-200x200.jpg" alt="Settlers of Catan">
                     <div class="text">
-                        Project 1
+                        Board Games
                     </div>
                 </div>
                 <div class="image mb-3">
-                    <img class=" img-fluid" src="https://picsum.photos/200/200" alt="Project 2">
+                    <img class=" img-fluid" src="./Assets/Images/Cooking-200x200.jpg" alt="Cooking">
                     <div class="text">
-                        Project 2
+                        Cooking
                     </div>
                 </div>
             </div>
@@ -86,15 +86,15 @@
         <div class="row">
             <div class="col-xl-6 col-lg-8 col-md-10">
                 <div class="image mb-3 mr-2">
-                    <img class=" img-fluid" src="https://picsum.photos/200/200" alt="Project 3">
+                    <img class=" img-fluid" src="./Assets/Images/gardening-200x200.jpg" alt="Gardening">
                     <div class="text">
-                        Project 3
+                        Gardening
                     </div>
                 </div>
                 <div class="image mb-3">
-                    <img class=" img-fluid" src="https://picsum.photos/200/200" alt="Project 3">
+                    <img class=" img-fluid" src="./Assets/Images/hiking-200x200.jpg" alt="Hiking">
                     <div class="text">
-                        Project 4
+                        Hiking
                     </div>
                 </div>
             </div>
@@ -103,15 +103,15 @@
         <div class="row">
             <div class="col-xl-6 col-lg-8 col-md-10">
                 <div class="image mb-3 mr-2">
-                    <img class="img-fluid" src="https://picsum.photos/200/200" alt="Project 1">
+                    <img class="img-fluid" src="./Assets/Images/ice-cream-200x200.jpg" alt="ice-cream-200x200">
                     <div class="text">
-                        Project 5
+                        Ice Cream
                     </div>
                 </div>
                 <div class="image mb-3">
-                    <img class=" img-fluid" src="https://picsum.photos/200/200" alt="Project 2">
+                    <img class=" img-fluid" src="./Assets/Images/Poodle-200x200.jpg" alt="Poodles">
                     <div class="text">
-                        Project 6
+                        Poodles
                     </div>
                 </div>
             </div>
