--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="./index.html">About<span class="sr-only">(current)</span></a>
+                    <a class="nav-link text-white" href="./index.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="./portfolio.html">Portfolio</a>
