updated about me text

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 <hr>
                 <img src="./Assets/Images/about-me_200x200.jpg" class="float-left mr-3 img-fluid" alt="Emmett Brady">
                 <p>Emmett Brady has lived and worked in the Bay Area since 2009. For the past six years he worked for
-                    the Department of Agriculture performing organic certification inspections. Currently he is in
+                    the Department of Agriculture performing organic certification inspections. Currently he is enrolled in
                     Berkeley Coding Bootcamp's Full Stack Web Development course looking to make a career change into
                     web development. </p>
-                <p>In his free time he enjoys playing video games, gardening, and debugging code for hours.</p>
+                <p>In his free time he enjoys playing games with friends, gardening with his poodle, and debugging code for hours.</p>
             </section>
         </article>
     </main>
