added link to style.css to all html pages and updated style.css with style for absolute text overlaid on relative images

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./Assets/css/">
+    <link rel="stylesheet" href="./Assets/css/style.css">
     <title>About Me | Emmett Brady</title>
 </head>
 
 <body class="d-flex flex-column sticky-footer-wrapper bg-light">
 
-    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-info">
+    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-info" id="page-content">
         <h1><a class="navbar-brand ml-2 text-white" href="./index.html">Emmett Brady</a></h1>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,9 +51,11 @@
         </article>
     </main>
 
-    <footer class="footer" style="text-align: center">
-        &copy; Emmett Brady
-    </footer>
+    <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+        <div class="container text-center">
+          <small>Copyright &copy; Your Website</small>
+        </div>
+      </footer>
 
 
     <!-- Optional JavaScript -->
