--- a/portfolio.html
+++ b/portfolio.html
@@ -9,35 +9,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./Assets/css/">
+    <link rel="stylesheet" href="./Assets/css/style.css">
 
     <title>Portfolio | Emmett Brady</title>
-
-
-    <!-- Why won't styling work in my css file? -->
-    <style>
-        .image {
-            position: relative;
-            display: inline-block;
-            /* Make the width of box same as image */
-        }
-
-        .image .text {
-            position: absolute;
-            z-index: 999;
-            margin: 0 auto;
-            left: 0;
-            right: 0;
-            text-align: center;
-            top: 80%;
-            /* Adjust this value to move the positioned div up and down */
-            background: rgba(0, 0, 0, 0.8);
-            font-family: Arial, sans-serif;
-            color: #fff;
-            width: 100%;
-            /* Set the width of the positioned div */
-        }
-    </style>
 
 </head>
 
