added sticky footer html to all pages and added sticky footer styling to css

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body class="d-flex flex-column sticky-footer-wrapper bg-light">
+<body class="d-flex flex-column bg-light">
 
     <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-info">
         <h1><a class="navbar-brand ml-2 text-white" href="./index.html">Emmett Brady</a></h1>
@@ -37,7 +37,7 @@
             </ul>
         </div>
     </nav>
-    <main class="container-fluid flex-fill bg-white mt-3 ml-4 w-75 float-left">
+    <main class="container-fluid page-content flex-fill bg-white mt-3 ml-4 w-75 float-left" id="page-content">
         <h1>Portfolio</h1>
         <hr>
         <div class="row">
@@ -92,9 +92,11 @@
         </div>
     </main>
 
-    <footer class="footer" style="text-align: center">
-        &copy; Emmett Brady
-    </footer>
+    <footer id="sticky-footer" class="py-4 bg-info text-white-50">
+        <div class="container text-center">
+          <small>&copy; Emmett Brady</small>
+        </div>
+      </footer>
 
 
     <!-- Optional JavaScript -->
