--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <title>Contact | Emmett Brady</title>
 </head>
 
-<body class="d-flex flex-column sticky-footer-wrapper bg-light">
+<body class="d-flex flex-column bg-light">
 
     <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-info">
         <h1><a class="navbar-brand ml-2 text-white" href="./index.html">Emmett Brady</a></h1>
@@ -35,7 +35,7 @@
             </ul>
         </div>
     </nav>
-    <main class="container-fluid flex-fill bg-white mt-3 ml-4 w-75">
+    <main class="container-fluid flex-fill bg-white mt-3 ml-4 w-75" id="page-content">
 
         <form class="mt-3 ml-3">
             <h1>Contact</h1>
@@ -69,9 +69,11 @@
         </form>
     </main>
 
-    <footer class="footer" style="text-align: center">
-        &copy; Emmett Brady
-    </footer>
+    <footer id="sticky-footer" class="py-4 bg-info text-white-50">
+        <div class="container text-center">
+          <small>&copy; Emmett Brady</small>
+        </div>
+      </footer>
 
 
     <!-- Optional JavaScript -->
