--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <title>About Me | Emmett Brady</title>
 </head>
 
-<body class="d-flex flex-column sticky-footer-wrapper bg-light">
+<body class="d-flex flex-column bg-light">
 
-    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-info" id="page-content">
+    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-info">
         <h1><a class="navbar-brand ml-2 text-white" href="./index.html">Emmett Brady</a></h1>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +36,7 @@
         </div>
     </nav>
 
-    <main class="container-fluid flex-fill bg-white mt-3 ml-4 w-50 float-left">
+    <main class="container-fluid flex-fill bg-white mt-3 ml-4 w-50 float-left" id="page-content">
         <article class="row">
             <section class="col-lg-12">
                 <h1>About Me</h1>
@@ -51,9 +51,9 @@
         </article>
     </main>
 
-    <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+    <footer id="sticky-footer" class="py-4 bg-info text-white-50">
         <div class="container text-center">
-          <small>Copyright &copy; Your Website</small>
+          <small>&copy; Emmett Brady</small>
         </div>
       </footer>
 
