updated text for about me section

--- a/index.html
+++ b/index.html
@@ -43,19 +43,21 @@
                 <hr>
                 <img src="./Assets/Images/about-me_200x200.jpg" class="float-left mr-3 img-fluid" alt="Emmett Brady">
                 <p>Emmett Brady has lived and worked in the Bay Area since 2009. For the past six years he worked for
-                    the Department of Agriculture performing organic certification inspections. Currently he is enrolled in
-                    Berkeley Coding Bootcamp's Full Stack Web Development course looking to make a career change into
+                    the Department of Agriculture performing organic certification inspections. Currently he is enrolled
+                    in Berkeley Coding Bootcamp's Full Stack Web Development course looking to make a career change into
                     web development. </p>
-                <p>In his free time he enjoys playing games with friends, gardening with his poodle, and debugging code for hours.</p>
+                <p>In his free time he enjoys playing games with friends, gardening with his poodle, and annoying his
+                    wife. In his non-free time he enjoys debugging for hours. As for unattainable goals, he wants to try
+                    every flavor of ice cream that isn't inherently gross.</p>
             </section>
         </article>
     </main>
 
     <footer id="sticky-footer" class="py-4 bg-info text-white-50">
         <div class="container text-center">
-          <small>&copy; Emmett Brady</small>
+            <small>&copy; Emmett Brady</small>
         </div>
-      </footer>
+    </footer>
 
 
     <!-- Optional JavaScript -->
